--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ License: GPL-3
 Title: DataSHIELD server side functions for my first package
 Description: DataSHIELD server side functions
 AggregateMethods: meanDS,
-    length=base::length
+    length=base::length,
+    isValidDS
 AssignMethods: replaceNaDS,
     log=base::log
 Options: datashield.privacyLevel=5
